// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderAmpScripts правильно формирует AMP-скрипты для pageType=card-amp 1`] = `
Array [
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-bind-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-bind"
    src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-accordion"
    src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-sidebar"
    src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-script-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-script"
    src="https://cdn.ampproject.org/v0/amp-script-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-analytics"
    src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-ad-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-ad"
    src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-selector-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-selector"
    src="https://cdn.ampproject.org/v0/amp-selector-0.1.js"
  />,
]
`;

exports[`renderAmpScripts правильно формирует AMP-скрипты для pageType=catalog-amp-card 1`] = `
Array [
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-bind-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-bind"
    src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-sidebar"
    src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-analytics"
    src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-ad-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-ad"
    src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-carousel-0.2.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-carousel"
    src="https://cdn.ampproject.org/v0/amp-carousel-0.2.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-selector-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-selector"
    src="https://cdn.ampproject.org/v0/amp-selector-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-form-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-form"
    src="https://cdn.ampproject.org/v0/amp-form-0.1.js"
  />,
]
`;

exports[`renderAmpScripts правильно формирует AMP-скрипты для pageType=catalog-amp-index 1`] = `
Array [
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-bind-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-bind"
    src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-sidebar"
    src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-next-page-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-next-page"
    src="https://cdn.ampproject.org/v0/amp-next-page-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-analytics"
    src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-ad-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-ad"
    src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-carousel-0.2.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-carousel"
    src="https://cdn.ampproject.org/v0/amp-carousel-0.2.js"
  />,
  <meta
    content="amp-next-page"
    name="amp-experiments-opt-in"
  />,
]
`;

exports[`renderAmpScripts правильно формирует AMP-скрипты для pageType=listing-amp 1`] = `
Array [
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-accordion"
    src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-sidebar"
    src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-next-page-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-next-page"
    src="https://cdn.ampproject.org/v0/amp-next-page-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-analytics"
    src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-ad-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-ad"
    src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-selector-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-selector"
    src="https://cdn.ampproject.org/v0/amp-selector-0.1.js"
  />,
  <meta
    content="amp-next-page"
    name="amp-experiments-opt-in"
  />,
]
`;

exports[`renderAmpScripts правильно формирует AMP-скрипты для неизвестного pageType 1`] = `
Array [
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-sidebar"
    src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-analytics"
    src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
  />,
]
`;

exports[`renderAmpScripts правильно формирует AMP-скрипты если есть видео в relatedVideos 1`] = `
Array [
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-bind-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-bind"
    src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-accordion"
    src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-sidebar"
    src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-script-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-script"
    src="https://cdn.ampproject.org/v0/amp-script-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-analytics"
    src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-ad-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-ad"
    src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-selector-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-selector"
    src="https://cdn.ampproject.org/v0/amp-selector-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-lightbox-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-lightbox"
    src="https://cdn.ampproject.org/v0/amp-lightbox-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-youtube"
    src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"
  />,
]
`;

exports[`renderAmpScripts правильно формирует AMP-скрипты если есть видео в video 1`] = `
Array [
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-bind-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-bind"
    src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-sidebar"
    src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-analytics"
    src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-ad-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-ad"
    src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-carousel-0.2.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-carousel"
    src="https://cdn.ampproject.org/v0/amp-carousel-0.2.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-selector-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-selector"
    src="https://cdn.ampproject.org/v0/amp-selector-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-form-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-form"
    src="https://cdn.ampproject.org/v0/amp-form-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-lightbox-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-lightbox"
    src="https://cdn.ampproject.org/v0/amp-lightbox-0.1.js"
  />,
  <link
    as="script"
    href="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"
    rel="preload"
  />,
  <script
    async={true}
    custom-element="amp-youtube"
    src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"
  />,
]
`;
